# CLIT-Controller

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT_INTELLIGENCE_ONE_SHOT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
agentflow-studio/: .gitignore  DESIGN.md  NEXT_STEPS.md  README.md  package.json  pyproject.toml
agentflow-studio/.claude/: launch.json
agentflow-studio/backend/agentflow/: __main__.py  app.py  chat_service.py  config.py  git_service.py  models.py  paths.py  process_runner.py  prompt_templates.py  provider_probe.py  queue_service.py  routing_service.py  task_service.py  usage_service.py
agentflow-studio/backend/agentflow/api/: routes_agents.py  routes_chat.py  routes_logs.py  routes_preview.py  routes_projects.py  routes_queue.py  routes_tasks.py  routes_usage.py
agentflow-studio/backend/tests/: test_chat_service.py  test_provider_install.py  test_queue_service.py  test_redaction.py  test_routing_service.py  test_task_directive.py  test_task_service.py  test_usage_service.py
agentflow-studio/frontend/: package-lock.json  package.json  tailwind.config.js
agentflow-studio/frontend/src/: App.tsx  api.ts  persist.ts  styles.css  types.ts
agentflow-studio/frontend/src/components/: ActivityBar.tsx  BudgetModePicker.tsx  ChatPanel.tsx  CodeReader.tsx  DragHandle.tsx  FileTree.tsx  FileTypeIcon.tsx  LogConsole.tsx  ProviderCard.tsx  RoutingRecommendationCard.tsx  Sidebar.tsx  SourceControlPanel.tsx  StatusBadge.tsx  StatusBar.tsx  UsageHealthBadge.tsx  icons.tsx
agentflow-studio/frontend/src/pages/: AgentsPage.tsx  LogsPage.tsx  PreviewPage.tsx  ProjectsPage.tsx  SettingsPage.tsx  TasksPage.tsx  UsagePage.tsx
agentflow-studio/scripts/: dev.sh
backend/agentflow/: __init__.py  __main__.py  agent_commands.py  app.py  chat_directives.py  chat_service.py  config.py  contracts.py  controller_protocol.py  dependency_service.py  event_bus.py  git_service.py  headroom_service.py  io_contracts.py  memory_service.py  models.py  opensrc_service.py  origins.py  paths.py  policy_service.py  ponytail.py  process_runner.py  prompt_templates.py  provider_probe.py  queue_service.py  redaction.py  routing_service.py  state_store.py  stream_normalizer.py  task_service.py  terminal_service.py  transitions.py  usage_service.py  workflow.py  workspace.py
backend/tests/: conftest.py  test_chat_service.py  test_chat_submit.py  test_context_benchmarks.py  test_context_compression.py  test_context_pipeline.py  test_context_prompt_builder.py  test_context_ranker.py  test_context_repo_map.py  test_context_routes.py  test_context_sources.py  test_contracts.py  test_controller_actions.py  test_controller_protocol.py  test_csrf.py  test_dependency_service.py  test_event_payload.py  test_git_service.py  test_hardening.py  test_headroom_service.py  test_io_contracts.py  test_memory_service.py  test_memory_ui.py  test_model_flag.py  test_opensrc_capability.py  test_opensrc_service.py  test_orchestrator_dispatch_adapter.py  test_orchestrator_engine.py  test_orchestrator_personas.py  test_orchestrator_pipeline.py  test_orchestrator_router.py  test_orchestrator_usage_bridge.py  test_pillars.py  test_policy_service.py  test_ponytail.py  test_process_cancel.py  test_protocol_wiring.py  (+25 more)
docs/: AI_AGENT_GUIDE.md  API.md  ARCHITECTURE.md  BACKEND.md  CONFIGURATION.md  DATA_MODEL.md  DEVELOPMENT.md  ENGINEERING_STANDARDS.md  FEATURE_STATUS.md  FRONTEND.md  GETTING_STARTED.md  GLOSSARY.md  INDEX.md  LIMITATIONS.md  OPERATIONS.md  PILLARS.md  PRODUCT_OVERVIEW.md  REPOSITORY_STRUCTURE.md  ROADMAP.md  SECURITY.md  TESTING.md  TROUBLESHOOTING.md  cli-interface-mythos-revamp.md  live-output-everywhere.md  local-voice-io.md  phase-1-5-product-workbench.md  pwa-chrome-app-mode.md  streaming-renderer-decision.md  task-controller-io-surface.md  text-streaming-across-the-board.md  vscode-style-agent-dock.md
frontend/: .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
scripts/: app-mode.sh  app.sh  create-macos-app-mode.sh  dev.sh  headroom.sh  install.sh  make-app.sh  make-icons.py  sync-engine.sh
(+168 files in other folders)
