[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clit-controller-ide"
version = "0.1.0"
description = "Vibe with CLIT Controller"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["backend"]
include = ["agentflow*"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
