[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clit-controller-ide"
version = "0.1.0"
description = "Vibe with CLIT Controller"
requires-python = ">=3.11"
# Upper bounds cap the abstract supported range so an unvetted major version
# cannot land via `pip install`; exact transitive versions are pinned in
# requirements.lock (see docs/OPERATIONS.md).
dependencies = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.27,<1",
    "pydantic>=2.5,<3",
    # Primary token-reduction layer (Pillar 1): installed with the backend so the
    # managed proxy works out of the box — no separate global install required.
    "headroom-ai[proxy]>=0.26,<1",
]

[project.optional-dependencies]
# httpx is required by Starlette's TestClient (used in the test suite); ruff/mypy
# /pytest-cov/pip-audit provide the local + CI verification pipeline.
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.8",
    "pytest-cov>=4.1",
    "pip-audit>=2.7",
]

[tool.setuptools.packages.find]
where = ["backend"]
include = ["agentflow*"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
filterwarnings = ["ignore::DeprecationWarning"]

# ----------------------------------------------------------------------- ruff
[tool.ruff]
# The codebase is hand-formatted at a wider width than Black's 88; 120 keeps the
# formatter close to the existing style. `ruff format` is the canonical formatter
# (see docs/ENGINEERING_STANDARDS.md).
line-length = 120
target-version = "py311"
extend-exclude = [".venv", "dist", "dist-app", "frontend"]

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I import-sort, B bugbear. `ruff format` owns line
# width, so E501 is left to the formatter; UP (pyupgrade) is omitted to avoid
# behaviour-adjacent rewrites on working code.
select = ["E", "W", "F", "I", "B"]
# B008: FastAPI's Depends()/Query() defaults are the framework idiom, not a bug.
# E501: line length is enforced by the formatter, not the linter.
ignore = ["B008", "E501"]

[tool.ruff.lint.per-file-ignores]
# Tests may use long setup lines freely.
"backend/tests/*" = ["E501"]

# ----------------------------------------------------------------------- mypy
# "Meaningful" type checking calibrated to this codebase: it surfaces real
# Optional/None bugs without demanding full strictness on the many dynamically
# shaped JSON dicts. Tighten incrementally (see docs/ENGINEERING_STANDARDS.md).
[tool.mypy]
python_version = "3.11"
files = ["backend/agentflow"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true

# ------------------------------------------------------------------- coverage
[tool.coverage.run]
source = ["agentflow"]
branch = true

[tool.coverage.report]
show_missing = true
# Honest baseline the suite currently clears; raise as coverage grows. CI fails
# below this so coverage cannot silently regress.
fail_under = 55
